[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arbfree-vol-surface"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "pydantic",
]

[dependency-groups]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.11"
reportMissingTypeStubs = false
